# ps_os_2020

exercise02/: CMakeLists.txt  Makefile  task1.c  task2.c  task2Alternative.c  task3.c  task3Alternative.c  task3new
exercise04/: CMakeLists.txt  client  server  task1_client  task1_client.c  task1_server  task1_server.c
exercise05/: data1.txt  data2.txt  profile.sh  save.txt  task1_a.c  task1_b.c  task2_a  task2_a.c  task2_b  task2_b.c  task3.txt  times1.txt  times2.txt  valgrind-out.txt
exercise05Final/: Makefile  common.h  task1_a.c  task2_a.c  task2_b.c
exercise06/: Makefile  ph  philosophers.c  task1.c  task2.c
exercise07/: CMakeLists.txt  Makefile  converter.py  plotTimes.py  profile.sh  sredirectOutput.txt  task1  task1.c  task1_iter.c  task1_sec  task3.c  task3_atomic.c  timestask1.txt  timestask2.txt  timestask3.txt
exercise07Save/exercise07/: task2  timestask3_atomic.txt
exercise07Save/test/: task1_iter  task2.c  task3  task3_atomic
exercise09/: CMakeLists.txt  Makefile  common.h  membench  membench.c  system_allocator.c  task2.c  task3.c
self_assessment_test/: CMakeLists.txt  Task2.txt  bstree.c  bstree.h  bstree_test.c  bstree_test_output.txt  program
